--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,20 @@ name: GitHub Actions CI
 
 on:
   push:
-    branches: [main, og/ci]
+    branches: [main]
   pull_request: {}
 
 jobs:
   ci:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.19', '1.20' ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: ${{ matrix.go }}
       - run: make tools
       - run: make depscheck
       - run: make lint
