--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,19 @@ jobs:
       - run: make lint
       - run: make build
       - run: make test
+  doc:
+    if: ${{ failure() }}
+    needs: ci
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+      - name: Generate documentation 
+        run: make generate
+      - name: Add new documentation
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: 'docs: Github Action to generate docs'
