fix(ci): invert condition workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - run: make build
       - run: make test
   doc:
-    if: ${{ failure() }}
+    if: ${{ success() }}
     needs: ci
     runs-on: ubuntu-latest
     steps:
