--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,17 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '1.20'
+
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@v6
+        
       - name: Generate documentation 
         run: make generate
+
       - name: Add new documentation
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
           message: 'docs: Github Action to generate docs'
+          branch: ${{ steps.branch-name.outputs.current_branch }}
