feat: update group

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -8,6 +8,6 @@ services:
       - 1122:22
     volumes:
       - ./entrypoint.sh:/mount/entrypoint.sh
-      - ./idthebastion.pub:/mount/idthebastion.pub
+      - ~/.ssh/idthebastion.pub:/mount/idthebastion.pub
     entrypoint: /mount/entrypoint.sh
   
