--- a/.terraformrc
+++ b/.terraformrc
@@ -1,7 +1,7 @@
 provider_installation {
 
   dev_overrides {
-      "hashicorp/arkhn/thebastion" = "/Users/<Username>/go/bin"
+      "hashicorp/arkhn/thebastion" = "/root/go/bin"
   }
 
   # For all other providers, install them directly from their origin provider
